Agregando segundo parrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Aqui iría el título de la página</h1>
     
     <p>Esto es un párrafo</p>
+    <p>Esto es un segundo parrafo</p>
 </body>
 </html>
