--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
+<style href="miEstilo.css">
 <body>
     <h1>Aqui iría el título de la página</h1>
     
