Creamos parrafo rama2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Aqui iría el título de la página</h1>
     
     <p>Esto es un párrafo</p>
-    <p>Esto es un segundo parrafo</p>
+    <p>Esto es un parrafo de la prueba de ramas</p>
+    
 </body>
 </html>
